--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -25,9 +25,9 @@
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
+@import 'components/drawer'; // Navigation drawer (can be turned off)
 @import 'components/progress'; // Used to style progress and activity indicators (can be turned off)
 @import 'components/selection'; // Used to style selection controls (checkbox, radio button, switch) (can be turned off)
-@import 'components/sidenav'; // Side navigation (can be turned off)
 @import 'components/sliders'; // Used to style sliders (can be turned off)
 @import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
 @import 'components/tables'; // Used to style tables (can be turned off)
